<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <TextView
        style="@style/ChapterHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/f0_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/side_nav_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
               android:id="@+id/cv_f0_alatbahan"
                style="@style/CardStyle">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:animateLayoutChanges="true">

                    <ImageView
                        android:id="@+id/f0_iv_alatbahan"
                        style="@style/HeadingImage1"
                        android:src="@drawable/ic_build_black_18dp" />

                    <TextView
                        style="@style/Heading1"
                        android:layout_toRightOf="@id/f0_iv_alatbahan"
                        android:text="@string/f0_tv_tool_title" />

                    <TextView
                        android:id="@+id/f0_tv_alatbahan"
                        android:layout_below="@+id/f0_iv_alatbahan"
                        android:text="@string/f0_tool"
                        style="@style/TextContent1"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_f0_procedure"
                style="@style/CardStyle">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:animateLayoutChanges="true">

                    <ImageView
                        android:id="@+id/f0_iv_procedure"
                        style="@style/HeadingImage2"
                        android:src="@drawable/ic_toc_black_18dp" />

                    <TextView
                        style="@style/Heading2"
                        android:layout_toRightOf="@id/f0_iv_procedure"
                        android:text="@string/f0_procedure_title" />

                    <TextView
                        android:id="@+id/f0_tv_procedure"
                        style="@style/TextContent2"
                        android:layout_below="@+id/f0_iv_procedure" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:background="@color/colorRowSecond"
                        android:layout_height="100dp"
                        android:layout_below="@+id/f0_tv_procedure">

                        <LinearLayout
                            android:id="@+id/mygallery"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >

                            <ImageView
                               style="@style/GalleryItem"
                                android:src="@drawable/f0_1" />

                            <ImageView
                                style="@style/GalleryItem"
                                android:src="@drawable/f0_2" />

                            <ImageView
                                style="@style/GalleryItem"
                                android:src="@drawable/f0_3" />

                            <ImageView
                                style="@style/GalleryItem"
                                android:src="@drawable/f0_4" />

                            <ImageView
                                style="@style/GalleryItem"
                                android:src="@drawable/f0_5" />

                            <ImageView
                                style="@style/GalleryItem"
                                android:src="@drawable/f0_6" />

                        </LinearLayout>

                    </HorizontalScrollView>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cv_f0_isolation"
                style="@style/CardStyle">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:animateLayoutChanges="true">

                    <ImageView
                        android:id="@+id/f0_iv_isolation"
                        style="@style/HeadingImage3"
                        android:src="@drawable/ic_toc_black_18dp" />

                    <TextView
                        style="@style/Heading3"
                        android:layout_toRightOf="@id/f0_iv_isolation"
                        android:text="@string/f0_isolation_title" />

                    <TextView
                        android:id="@+id/f0_tv_isolation"
                        style="@style/TextContent3"
                        android:layout_below="@+id/f0_iv_isolation" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:background="@color/colorRowThird"
                        android:layout_height="100dp"
                        android:layout_below="@+id/f0_tv_isolation">

                        <LinearLayout
                            android:id="@+id/f0gallery2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                style="@style/GalleryItem"
                                android:src="@drawable/f0_6" />
                            <ImageView
                                style="@style/GalleryItem"
                                android:src="@drawable/f0_7" />
                            <ImageView
                                style="@style/GalleryItem"
                                android:src="@drawable/f0_8" />
                            <ImageView
                                style="@style/GalleryItem"
                                android:src="@drawable/f0_9" />
                            <ImageView
                                style="@style/GalleryItem"
                                android:src="@drawable/f0_10" />
                            <ImageView
                                style="@style/GalleryItem"
                                android:src="@drawable/f0_11" />
                        </LinearLayout>

                    </HorizontalScrollView>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>